--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/bin/stub_gen.rs"
 
 [dependencies]
 ahash = "0.8.12"
+bincode = "1.3.3"
 faster-hex = "0.9.0"
 futures = "0.3.31"
 kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", rev = "ad4111e" }
@@ -40,7 +41,7 @@ secp256k1 = { version = "0.29.0", features = [
     "rand-std",
     "serde",
 ] }
-serde = "1.0.228"
+serde = { version = "1.0.228", features = ["derive"] }
 serde-pyobject = "0.8.0"
 serde_json = "1.0.149"
 thiserror = "2.0.17"
